Bug 158131 - Konsole crashes when a view is closed twice
Summary: Konsole crashes when a view is closed twice
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 158410 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-02-20 23:03 UTC by David Benjamin
Modified: 2008-02-25 19:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Benjamin 2008-02-20 23:03:23 UTC
Version:           2.0 (using KDE 4.0.1)
Installed from:    Ubuntu Packages
OS:                Linux

Steps to Reproduce.
1. Open Konsole.
2. Ctrl-Shift-T.
3. Click the top view.
4. Type "exit" or press Ctrl-D (send EOF character)

Results:
KDE crash handler appears, reporting a SEGV.
Comment 1 Robert Knight 2008-02-21 00:57:53 UTC
Hello, 

Can you supply the backtrace which is given in the crash handler?  I think this bug has been fixed.
Comment 2 FiNeX 2008-02-21 10:58:49 UTC
Reproduced on revision 777260.

Application: Konsole (konsole), signal SIGSEGV
 [?1034hUsing host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 0xb63cf6d0 (LWP 8232)]
[New Thread 0xb4d74b90 (LWP 8235)]
[KCrash handler]
#6  QList<QWidget*>::removeAll (this=0x9c, _t=@0xbfd5ee28)
    at ../../include/QtCore/../../../../qt-copy/src/corelib/tools/qlist.h:571
#7  0xb6b17468 in QWidget::removeAction (this=0x82775c8, action=0x82d24d0)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/gui/kernel/qwidget.cpp:2611
#8  0xb79c18d6 in KXMLGUI::ActionList::unplug (this=0x832e7ec, 
    container=0x82775c8)
    at /media/progetti/KDE4/kdesvn/kdelibs/kdeui/xmlgui/kxmlguifactory_p.cpp:52
#9  0xb79c3273 in KXMLGUI::ContainerNode::unplugClient (this=0x8271a28, 
    client=0x832e7e8)
    at /media/progetti/KDE4/kdesvn/kdelibs/kdeui/xmlgui/kxmlguifactory_p.cpp:438
#10 0xb79c35ab in KXMLGUI::ContainerNode::unplugActions (this=0x8271a28, 
    state=@0x8281110)
    at /media/progetti/KDE4/kdesvn/kdelibs/kdeui/xmlgui/kxmlguifactory_p.cpp:417
#11 0xb79c371f in KXMLGUI::ContainerNode::destruct (this=0x8271a28, 
    element=@0xbfd5ef44, state=@0x8281110)
    at /media/progetti/KDE4/kdesvn/kdelibs/kdeui/xmlgui/kxmlguifactory_p.cpp:326
#12 0xb79c3a64 in KXMLGUI::ContainerNode::destructChildren (this=0x82777c8, 
    element=@0xbfd5efc4, state=@0x8281110)
    at /media/progetti/KDE4/kdesvn/kdelibs/kdeui/xmlgui/kxmlguifactory_p.cpp:369
#13 0xb79c370d in KXMLGUI::ContainerNode::destruct (this=0x82777c8, 
    element=@0xbfd5efc4, state=@0x8281110)
    at /media/progetti/KDE4/kdesvn/kdelibs/kdeui/xmlgui/kxmlguifactory_p.cpp:324
#14 0xb79c3a64 in KXMLGUI::ContainerNode::destructChildren (this=0x827fbf0, 
    element=@0xbfd5f0a0, state=@0x8281110)
    at /media/progetti/KDE4/kdesvn/kdelibs/kdeui/xmlgui/kxmlguifactory_p.cpp:369
#15 0xb79c370d in KXMLGUI::ContainerNode::destruct (this=0x827fbf0, 
    element=@0xbfd5f0a0, state=@0x8281110)
    at /media/progetti/KDE4/kdesvn/kdelibs/kdeui/xmlgui/kxmlguifactory_p.cpp:324
#16 0xb79bef2b in KXMLGUIFactory::removeClient (this=0x82810a8, 
    client=0x828c4f4)
    at /media/progetti/KDE4/kdesvn/kdelibs/kdeui/xmlgui/kxmlguifactory.cpp:337
#17 0xb7f586f7 in Konsole::MainWindow::disconnectController (this=0x81e0998, 
    controller=0x828c4e0)
    at /media/progetti/KDE4/kdesvn/kdebase/apps/konsole/src/MainWindow.cpp:136
#18 0xb7f5910b in Konsole::MainWindow::activeViewChanged (this=0x81e0998, 
    controller=0x82f48d8)
    at /media/progetti/KDE4/kdesvn/kdebase/apps/konsole/src/MainWindow.cpp:149
#19 0xb7f598b0 in Konsole::MainWindow::qt_metacall (this=0x81e0998, 
    _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0xbfd5f22c)
    at /media/progetti/KDE4/kdesvn/build/kdebase/apps/konsole/src/MainWindow.moc:104
#20 0xb72202ec in QMetaObject::activate (sender=0x8279608, 
    from_signal_index=<value optimized out>, to_signal_index=6, 
    argv=0xbfd5ee28)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:2992
#21 0xb72206f2 in QMetaObject::activate (sender=0x8279608, m=0xb7fc3410, 
    local_signal_index=2, argv=0xbfd5f22c)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3065
#22 0xb7fa3323 in Konsole::ViewManager::activeViewChanged (this=0x8279608, 
    _t1=0x82f48d8)
    at /media/progetti/KDE4/kdesvn/build/kdebase/apps/konsole/src/ViewManager.moc:165
#23 0xb7fa8509 in Konsole::ViewManager::qt_metacall (this=0x8279608, 
    _c=QMetaObject::InvokeMetaMethod, _id=27, _a=0xbfd5f32c)
    at /media/progetti/KDE4/kdesvn/build/kdebase/apps/konsole/src/ViewManager.moc:141
#24 0xb72202ec in QMetaObject::activate (sender=0x82f48d8, 
    from_signal_index=<value optimized out>, to_signal_index=9, 
    argv=0xbfd5ee28)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:2992
#25 0xb72206f2 in QMetaObject::activate (sender=0x82f48d8, m=0xb7fc2b10, 
    local_signal_index=0, argv=0xbfd5f32c)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3065
#26 0xb7f7c113 in Konsole::SessionController::focused (this=0x82f48d8, 
    _t1=0x82f48d8)
    at /media/progetti/KDE4/kdesvn/build/kdebase/apps/konsole/src/SessionController.moc:189
#27 0xb7f7cec7 in Konsole::SessionController::eventFilter (this=0x82f48d8, 
    watched=0x82f3b48, event=0xbfd5f6e8)
    at /media/progetti/KDE4/kdesvn/kdebase/apps/konsole/src/SessionController.cpp:345
#28 0xb7210361 in QCoreApplicationPrivate::sendThroughObjectEventFilters (
    this=0x8075308, receiver=0x82f3b48, event=0xbfd5f6e8)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:693
#29 0xb6ad5173 in QApplicationPrivate::notify_helper (this=0x8075308, 
    receiver=0x82f3b48, e=0xbfd5f6e8)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:3753
#30 0xb6adbc98 in QApplication::notify (this=0xbfd60320, receiver=0x82f3b48, 
    e=0xbfd5f6e8)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:3724
#31 0xb78b307d in KApplication::notify (this=0xbfd60320, receiver=0x82f3b48, 
    event=0xbfd5f6e8)
    at /media/progetti/KDE4/kdesvn/kdelibs/kdeui/kernel/kapplication.cpp:311
#32 0xb720fee9 in QCoreApplication::notifyInternal (this=0xbfd60320, 
    receiver=0x82f3b48, event=0xbfd5f6e8)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:582
#33 0xb6adb78a in QApplicationPrivate::setFocusWidget (focus=0x82f3b48, 
    reason=Qt::MouseFocusReason)
    at ../../include/QtCore/../../../../qt-copy/src/corelib/kernel/qcoreapplication.h:215
#34 0xb6b19c3f in QWidget::setFocus (this=0x82f3b48, 
    reason=Qt::MouseFocusReason)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/gui/kernel/qwidget.cpp:5087
#35 0xb7fa35a2 in Konsole::ViewManager::focusActiveView (this=0x8279608)
    at /media/progetti/KDE4/kdesvn/kdebase/apps/konsole/src/ViewManager.cpp:347
#36 0xb7fa7569 in Konsole::ViewManager::viewCloseRequest (this=0x8279608, 
    view=0x8289948)
    at /media/progetti/KDE4/kdesvn/kdebase/apps/konsole/src/ViewManager.cpp:611
#37 0xb7fa8659 in Konsole::ViewManager::qt_metacall (this=0x8279608, 
    _c=QMetaObject::InvokeMetaMethod, _id=16, _a=0xbfd5f88c)
    at /media/progetti/KDE4/kdesvn/build/kdebase/apps/konsole/src/ViewManager.moc:130
#38 0xb72202ec in QMetaObject::activate (sender=0x829de88, 
    from_signal_index=<value optimized out>, to_signal_index=11, 
    argv=0xbfd5ee28)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:2992
#39 0xb72206f2 in QMetaObject::activate (sender=0x829de88, m=0xb7fc2fb0, 
    local_signal_index=7, argv=0xbfd5f88c)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3065
#40 0xb7f9d163 in Konsole::ViewContainer::viewRemoved (this=0x829de88, 
    _t1=0x8289948)
    at /media/progetti/KDE4/kdesvn/build/kdebase/apps/konsole/src/ViewContainer.moc:149
#41 0xb7f9f5d0 in Konsole::ViewContainer::viewDestroyed (this=0x829de88, 
    object=0x8289948)
    at /media/progetti/KDE4/kdesvn/kdebase/apps/konsole/src/ViewContainer.cpp:160
#42 0xb7f9f65b in Konsole::ViewContainer::qt_metacall (this=0x829de88, 
    _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0xbfd5f9fc)
    at /media/progetti/KDE4/kdesvn/build/kdebase/apps/konsole/src/ViewContainer.moc:90
#43 0xb7fa1aaa in Konsole::TabbedViewContainerV2::qt_metacall (this=0x829de88, 
    _c=QMetaObject::InvokeMetaMethod, _id=12, _a=0xbfd5f9fc)
    at /media/progetti/KDE4/kdesvn/build/kdebase/apps/konsole/src/ViewContainer.moc:270
#44 0xb72202ec in QMetaObject::activate (sender=0x8289948, 
    from_signal_index=<value optimized out>, to_signal_index=1, 
    argv=0xbfd5ee28)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:2992
#45 0xb7220600 in QMetaObject::activate (sender=0x8289948, m=0xb72a86d8, 
    from_local_signal_index=0, to_local_signal_index=1, argv=0xbfd5f9fc)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3085
#46 0xb722068b in QObject::destroyed (this=0x8289948, _t1=0x8289948)
    at .moc/release-shared/moc_qobject.cpp:115
#47 0xb7223716 in ~QObject (this=0x8289948)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:796
#48 0xb6b19901 in ~QWidget (this=0x8289948)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/gui/kernel/qwidget.cpp:1311
#49 0xb7f98e90 in ~TerminalDisplay (this=0x8289948)
    at /media/progetti/KDE4/kdesvn/kdebase/apps/konsole/src/TerminalDisplay.cpp:348
#50 0xb721c9ac in qDeleteInEventHandler (o=0x9c)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3580
#51 0xb721e8e1 in QObject::event (this=0x8289948, e=0x83240d0)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:1115
#52 0xb6b211b5 in QWidget::event (this=0x8289948, event=0x83240d0)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/gui/kernel/qwidget.cpp:7191
#53 0xb7f984d3 in Konsole::TerminalDisplay::event (this=0x8289948, e=0x83240d0)
    at /media/progetti/KDE4/kdesvn/kdebase/apps/konsole/src/TerminalDisplay.cpp:2442
#54 0xb6ad519c in QApplicationPrivate::notify_helper (this=0x8075308, 
    receiver=0x8289948, e=0x83240d0)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:3757
#55 0xb6adbc98 in QApplication::notify (this=0xbfd60320, receiver=0x8289948, 
    e=0x83240d0)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:3724
#56 0xb78b307d in KApplication::notify (this=0xbfd60320, receiver=0x8289948, 
    event=0x83240d0)
    at /media/progetti/KDE4/kdesvn/kdelibs/kdeui/kernel/kapplication.cpp:311
#57 0xb720fee9 in QCoreApplication::notifyInternal (this=0xbfd60320, 
    receiver=0x8289948, event=0x83240d0)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:582
#58 0xb721122d in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, 
    event_type=0, data=0x804ba18)
    at ../../include/QtCore/../../../../qt-copy/src/corelib/kernel/qcoreapplication.h:215
#59 0xb72113dd in QCoreApplication::sendPostedEvents (receiver=0x0, 
    event_type=0)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:1084
#60 0xb72360df in postEventSourceDispatch (s=0x8076f68)
    at ../../include/QtCore/../../../../qt-copy/src/corelib/kernel/qcoreapplication.h:220
#61 0xb65d8346 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#62 0xb65db6d2 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#63 0xb65dbc8e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#64 0xb7236678 in QEventDispatcherGlib::processEvents (this=0x8074ef8, 
    flags=@0xbfd60208)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:325
#65 0xb6b59145 in QGuiEventDispatcherGlib::processEvents (this=0x8074ef8, 
    flags=@0xbfd60240)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:204
#66 0xb720f112 in QEventLoop::processEvents (this=0xbfd60290, 
    flags=@0xbfd60264)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:146
#67 0xb720f241 in QEventLoop::exec (this=0xbfd60290, flags=@0xbfd60298)
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:193
#68 0xb721149a in QCoreApplication::exec ()
    at /media/progetti/KDE4/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:838
#69 0xb6ad4897 in QApplication::exec ()
    at /media/progetti/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:3289
#70 0xb7fb214e in kdemain (argc=1, argv=0xbfd60454)
    at /media/progetti/KDE4/kdesvn/kdebase/apps/konsole/src/main.cpp:97
#71 0x08048862 in main (argc=1, argv=0x0)
    at /media/progetti/KDE4/kdesvn/build/kdebase/apps/konsole/src/konsole_dummy.cpp:3
#0  0xb7fcb410 in __kernel_vsyscall ()
Comment 3 Robert Knight 2008-02-22 00:18:25 UTC
SVN commit 777939 by knight:


Fix crash when trying to remove menu actions associated with a controller whoose session
and view no longer exit.

BUG: 158131



 M  +8 -1      MainWindow.cpp  
 M  +12 -0     SessionController.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=777939
Comment 4 FiNeX 2008-02-22 15:02:24 UTC
Thanks Robert, the patch fix the bug :-)
Comment 5 Robert Knight 2008-02-25 19:44:01 UTC
*** Bug 158410 has been marked as a duplicate of this bug. ***