Fix crash when trying to remove menu actions associated with a controller whoose session and view no longer exit.

BUG: 158131


svn path=/branches/KDE/4.0/kdebase/apps/konsole/; revision=777939